[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalman"
description = "TODO"
version = "0.0.1"
readme = "README.md"
requires-python = ">= 3.7"
authors = [{ name = "John Doe", email = "example@example.com"}]
dependencies = [
    "torch",
    "tqdm",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: example",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "http://example.com"
Repository = "http://example.com"
Documentation = "http://example.com"
"Bug Report" = "http://example.com"

[tool.setuptools]
include-package-data = true
