[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dd_kalman"
description = "Toolbox with Kalman inspired filtering algorithms"
version = "0.0.1"
readme = "README.md"
requires-python = ">= 3.8"
authors = [{ name = "Raveeroj B.", email = "rjbaw@uw.edu" }]
dependencies = [
    "torch",
    "tqdm",
    "soundfile",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: example",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "http://example.com"
Repository = "http://example.com"
Documentation = "http://example.com"

[tool.setuptools]
include-package-data = true
